tests/invalidTest/other/const_const_unvalid_type32_1.q
# EXPECT type cannot be converted
def void errorType(){
    sint16 a = -2147483649
}